add the second image

--- a/task1_git_practice/index.html
+++ b/task1_git_practice/index.html
@@ -11,5 +11,6 @@
 <body>
     <p>Hello</p>
     <img src="images_folder/image1.jpeg" alt="Sunset">
+    <img src="images2_folder/images2_4.jpg" alt="View">
 </body>
 </html>
